# hr-app

./: .coverage  .env  .gitignore  README.md  check_columns.py  check_pptx.py  check_tables.py  deploy_key  deploy_key.pub  docker-compose.yml  hr_app.sql  nginx.conf  supabase_migration.sql  test_extraction.py  verify_pptx.py
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: health.py
backend/src/api/v1/: auth.py  candidates.py  jobs.py  matching.py  search.py
backend/src/core/: auth.py  config.py  logging.py
backend/src/db/: __init__.py  base.py  models.py  session.py
backend/src/models/: __init__.py  base.py  candidate.py  enums.py  job.py
backend/src/repositories/: __init__.py  base.py  candidate.py  job.py  user.py
backend/src/services/: ai_client.py
backend/src/tests/: conftest.py  test_database.py  test_health.py  test_repository.py
backend/tests/: conftest.py  test_ai_client.py  test_api_crud.py  test_coverage_gap.py  test_database.py  test_health.py  test_models.py  test_repository.py
services/backend/: .env.example  .gitignore  Deloitte_Template.pptx  Dockerfile  README.md  pyproject.toml  requirements.txt
services/backend/src/: main.py  worker.py
services/backend/src/api/: deps.py  health.py  metrics.py
services/backend/src/core/: auth.py  cache.py  config.py  logging.py  redis.py
services/backend/src/db/: __init__.py  base.py  models.py  session.py
services/backend/src/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py
services/backend/src/models/: __init__.py  auth.py  base.py  candidate.py  (+4 more)
services/backend/tests/: test_ai_client.py  test_api_crud.py  test_database.py  test_db_errors.py  test_health.py  test_models.py  test_z_final_coverage.py
(+582 files in other folders)
