[project]
name = "hr-app-backend"
version = "0.1.0"
description = "FastAPI backend for HR App"
requires-python = ">=3.9"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "UP007",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
combine-as-imports = true
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]